tests/input/parse/call-1.bkr


def f(n : int) -> int { return 0; }

def g() -> void { 
  f(0);     // OK
  f(true);  // error
}
